--- a/lesson7/Homework/style.css
+++ b/lesson7/Homework/style.css
@@ -1,16 +1,22 @@
+/* GLOBAL SETTINGS */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html {
+/* Main site color, border-radius & font  */
+:root {
+  --MainColor: #413fb5;
+  --BorderRadius: 7px;
   font-family: "system-ui", sans-serif;
 }
 
 a {
   text-decoration: none;
   color: black;
+  font-weight: 700;
 }
 
 .wrapper {
@@ -23,42 +29,119 @@ a {
   margin: 0 auto;
 }
 
-.logo {
-  margin-bottom: 30px;
+/* All my FLEX selectors in one place */
+:is(.main-container, .left-container, .social-container
+    a, .divider, .row, .consent) {
+  display: flex;
 }
+
+/* Main settings for border radius */
+:is(.main-container, .social-container, input, button) {
+  border-radius: 7px;
+}
+
+/* GLOBAL SETTINGS END */
 
 .main-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-  border-radius: 10px;
+  width: 650px;
+  min-height: 540px;
+  border: 1px solid rgba(0, 0, 0, 0.7);
   box-shadow: 0px 0px 7px rgba(100, 96, 106, 0.2);
+  margin-top: 40px;
 }
 
-.left-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.left-container * {
-  margin-bottom: 20px;
-}
-
-.social-container {
-  width: 100%;
-  border: 1px solid blue;
-  border-radius: 10px;
-}
-/*  */
 .right-container {
-  height: 100%;
-  width: 100%;
-  border: 2px dashed red;
+  width: 50%;
   background-image: url(./images/gym.jpg);
   background-position: center;
   background-size: cover;
+  z-index: -1;
+}
+
+.left-container {
+  width: 50%;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.left-container h2 {
+  font-size: 1.1rem;
+  font-weight: 800;
+  margin: 15px 0 20px 0;
+}
+
+/* SOCIAL BUTTONS */
+.social-container {
+  width: 100%;
+  border: 1px solid var(--MainColor);
+  margin-bottom: 10px;
+}
+
+.social-container a {
+  width: 100%;
+  align-items: center;
+  padding: 5px 10px;
+  font-size: 0.9rem;
+}
+
+.social-container img {
+  padding: 5px 20px;
+}
+
+.divider {
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0 25px 0;
+}
+
+.divider p {
+  font-size: 0.55rem;
+  font-weight: 700;
+}
+
+.divider-line {
+  height: 2px;
+  width: 5.5em;
+  background-color: rgba(63, 60, 60, 0.3);
+}
+
+.row {
+  gap: 10px;
+}
+
+input {
+  width: 100%;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(93, 89, 98, 0.1);
+}
+
+.form-container a {
+  border-bottom: 2px solid var(--MainColor);
+}
+
+span {
+  font-weight: 700;
+  font-size: 0.7rem;
+}
+
+.consent input {
+  width: auto;
+  margin: 0 10px 0 0;
+}
+
+button {
+  width: 100%;
+  padding: 15px 0;
+  margin: 25px 0 15px 0;
+  font-size: 0.8rem;
+  background-color: var(--MainColor);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.footer {
+  margin-bottom: 15px;
 }
