--- a/lesson24/homework/project/style.css
+++ b/lesson24/homework/project/style.css
@@ -6,6 +6,22 @@
 
 html {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 30s ease infinite;
+}
+
+/* BGC animation */
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .wrapper {
@@ -27,29 +43,36 @@ p {
   margin: 20px 0;
 }
 
+button {
+  width: 120px;
+  border: none;
+  text-transform: uppercase;
+}
+
 #list {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  justify-content: center;
-  align-content: space-between;
 }
 
 #list .card {
-  width: 20%;
-  padding: 1%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  align-content: space-between;
+  width: calc(20% - 20px);
+  margin: 10px;
   padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.35);
+  box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.8);
+  transition: 0.3s;
+}
+
+#list .card:hover {
+  filter: contrast(120%);
 }
 
 .card img {
   width: 100%;
   justify-content: center;
-}
-
-.container {
-  padding: 2px 16px;
+  border-radius: 5px;
 }
 
 #prev {
