--- a/lesson24/homework/project/style.css
+++ b/lesson24/homework/project/style.css
@@ -4,9 +4,31 @@
   box-sizing: border-box;
 }
 
+[data-mode="light"] {
+  --background: linear-gradient(-45deg, #ece9e6, #ffffff, #fff7f0, #ffffff);
+  --txt-color: #000;
+  --txt-shadow: 2px 2px 4px rgb(246, 239, 239);
+  --border: 2px solid #000;
+  --btn-bgc: #dbdbdb;
+  --arrow-color: #000;
+}
+
+[data-mode="dark"] {
+  --background: linear-gradient(-45deg, #232526, #414345, #232526, #414345);
+  --txt-color: #fff;
+  --txt-shadow: 2px 2px 4px rgb(12, 11, 11);
+  --border: 2px solid #fff;
+  --btn-bgc: #ebb793;
+  --arrow-color: #fff;
+}
+
 html {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  font-size: 62.5%;
+  font-family: "Shadows Into Light", "Arial", cursive;
+}
+
+body {
+  background: var(--background);
   background-size: 400% 400%;
   animation: gradient 30s ease infinite;
 }
@@ -24,6 +46,47 @@ html {
   }
 }
 
+input[type="checkbox"] {
+  visibility: hidden;
+}
+
+label {
+  display: block;
+  position: relative;
+  top: 0;
+  left: 90%;
+  width: 10em;
+  height: 5em;
+  background: rgb(231, 244, 248);
+  border-radius: 100px;
+  cursor: pointer;
+  text-indent: -9999px;
+  transition: 0.3s;
+  border: var(--border);
+}
+
+label:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  width: 4.5em;
+  height: 4.5em;
+  background: linear-gradient(#ff8008, #ffc837);
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background: rgb(97, 96, 96);
+}
+
+input:checked + label:after {
+  left: 50%;
+  background: linear-gradient(#d7dde8, #757f9a);
+}
+
 .wrapper {
   max-width: 1280px;
   width: 100%;
@@ -33,51 +96,110 @@ html {
 .nav {
   display: flex;
   justify-content: center;
+  margin-bottom: 15px;
 }
 
 h1,
 h3,
 h4,
 p {
+  font-size: 2rem;
   text-align: center;
-  margin: 20px 0;
+  color: var(--txt-color);
+  text-shadow: var(--txt-shadow);
+  letter-spacing: 2px;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+h3 {
+  margin-bottom: 20px;
+  font-size: 4rem;
+}
+
+h4 {
+  font-size: 2.5rem;
 }
 
 button {
-  width: 120px;
-  border: none;
+  position: relative;
+  width: 8em;
+  line-height: 50px;
+  margin: 0 70px;
+  border: var(--border);
+  background: var(--btn-bgc);
+  font-size: 2rem;
+  font-family: "Shadows Into Light", "Arial", cursive;
   text-transform: uppercase;
+  font-weight: bold;
+}
+
+button#prev {
+  border-bottom-right-radius: 20px;
+}
+
+button#next {
+  border-bottom-left-radius: 20px;
+}
+
+button#prev:before,
+button#next:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  border-color: var(--arrow-color);
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+  transition: 0.1s;
+  z-index: -1;
+}
+
+#prev:before {
+  left: 0;
+  border-right: 30px solid;
+}
+
+#next::before {
+  right: 0;
+  border-left: 30px solid;
+}
+
+button#prev:hover::before {
+  left: -35px;
+}
+
+button#next:hover::before {
+  right: -35px;
 }
 
 #list {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 
 #list .card {
   width: calc(20% - 20px);
+  height: 37em;
   margin: 10px;
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.35);
   box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.8);
   transition: 0.3s;
+  overflow: hidden;
 }
 
 #list .card:hover {
   filter: contrast(120%);
+  transform: scale(1.1);
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 .card img {
   width: 100%;
   justify-content: center;
   border-radius: 5px;
-}
-
-#prev {
-  margin: 0 10% 1% 0;
-}
-#next {
-  margin: 0 0% 1% 10%;
+  transition: 0.2s;
 }
